; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarI1FromR4.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarI1FromR4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLOAT = common dso_local global i32 0, align 4
@VarI1FromR4 = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarI1FromR4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarI1FromR4() #0 {
  %1 = load i32, i32* @FLOAT, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarI1FromR4, align 4
  %4 = call i32 @CONVERT(i32 %3, float -1.290000e+02)
  %5 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %6 = load i32, i32* @VarI1FromR4, align 4
  %7 = call i32 @CONVERT(i32 %6, float 0xC0601051E0000000)
  %8 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %9 = load i32, i32* @VarI1FromR4, align 4
  %10 = call i32 @CONVERT(i32 %9, float -1.285000e+02)
  %11 = call i32 @EXPECT(i32 -128)
  %12 = load i32, i32* @VarI1FromR4, align 4
  %13 = call i32 @CONVERT(i32 %12, float -1.280000e+02)
  %14 = call i32 @EXPECT(i32 -128)
  %15 = load i32, i32* @VarI1FromR4, align 4
  %16 = call i32 @CONVERT(i32 %15, float -1.000000e+00)
  %17 = call i32 @EXPECT(i32 -1)
  %18 = load i32, i32* @VarI1FromR4, align 4
  %19 = call i32 @CONVERT(i32 %18, float 0.000000e+00)
  %20 = call i32 @EXPECT(i32 0)
  %21 = load i32, i32* @VarI1FromR4, align 4
  %22 = call i32 @CONVERT(i32 %21, float 1.000000e+00)
  %23 = call i32 @EXPECT(i32 1)
  %24 = load i32, i32* @VarI1FromR4, align 4
  %25 = call i32 @CONVERT(i32 %24, float 1.270000e+02)
  %26 = call i32 @EXPECT(i32 127)
  %27 = load i32, i32* @VarI1FromR4, align 4
  %28 = call i32 @CONVERT(i32 %27, float 0x405FDF5C20000000)
  %29 = call i32 @EXPECT(i32 127)
  %30 = load i32, i32* @VarI1FromR4, align 4
  %31 = call i32 @CONVERT(i32 %30, float 1.275000e+02)
  %32 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %33 = load i32, i32* @VarI1FromR4, align 4
  %34 = call i32 @CONVERT(i32 %33, float 1.280000e+02)
  %35 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %36 = load i32, i32* @VarI1FromR4, align 4
  %37 = call i32 @CONVERT(i32 %36, float -1.500000e+00)
  %38 = call i32 @EXPECT(i32 -2)
  %39 = load i32, i32* @VarI1FromR4, align 4
  %40 = call i32 @CONVERT(i32 %39, float 0xBFE3333340000000)
  %41 = call i32 @EXPECT(i32 -1)
  %42 = load i32, i32* @VarI1FromR4, align 4
  %43 = call i32 @CONVERT(i32 %42, float -5.000000e-01)
  %44 = call i32 @EXPECT(i32 0)
  %45 = load i32, i32* @VarI1FromR4, align 4
  %46 = call i32 @CONVERT(i32 %45, float 0xBFD99999A0000000)
  %47 = call i32 @EXPECT(i32 0)
  %48 = load i32, i32* @VarI1FromR4, align 4
  %49 = call i32 @CONVERT(i32 %48, float 0x3FD99999A0000000)
  %50 = call i32 @EXPECT(i32 0)
  %51 = load i32, i32* @VarI1FromR4, align 4
  %52 = call i32 @CONVERT(i32 %51, float 5.000000e-01)
  %53 = call i32 @EXPECT(i32 0)
  %54 = load i32, i32* @VarI1FromR4, align 4
  %55 = call i32 @CONVERT(i32 %54, float 0x3FE3333340000000)
  %56 = call i32 @EXPECT(i32 1)
  %57 = load i32, i32* @VarI1FromR4, align 4
  %58 = call i32 @CONVERT(i32 %57, float 1.500000e+00)
  %59 = call i32 @EXPECT(i32 2)
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, float) #1

declare dso_local i32 @EXPECT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
